@@ -5,6 +5,7 @@ Revision history for Perl module Math::Prime::Util
     [ADDED]
 
     - formultiperm { ... } \@n            loop over multiset permutations
+    - binary(n)                           returns binary digits of n
 
 
 0.56 2015-12-13
